# 바닐라 자바스크립트 4-6까지의 내용

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="login-form" >
+    <form id="login-form" class="hidden">
         <input 
             required
             maxlength="15"
