--- a/index.html
+++ b/index.html
@@ -18,13 +18,29 @@
         <input type="submit"></button>
         <a href="https://www.naver.com">네이버</a> -->
     </form>
-    <h2 id="clock">00:00</h2>
-    <div id="quotes">
-        <span></span>
-        <span></span>
+
+    <div class="bodyArea">
+        <h2 id="clock">00:00</h2>
+        <div id="quotes">
+            <span></span>
+            <span></span>
+        </div>
+        <form id="todo-form">
+            <input type="text" placeholder="Write a To Da and Press Enter" required></input>
+        </form>
+        <ul id="todo-list"></ul>
+        <div id="weather">
+            <span></span>
+            <span></span>
+        </div>    
     </div>
+
     <script src="js/clock.js" defer></script>
     <script src="js/quotes.js" defer"></script>
+    <script src="js/background.js" defer"></script>
+    <script src="js/todo.js" defer"></script>
+    <script src="js/weather.js" defer"></script>
+
     <!-- <script src="js/app.js" defer></script> -->
 </body>
 </html>
